Rearrange image files, fix container spacing

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -132,10 +132,17 @@ h3{
     width: 100%;
     display: block;
   }
+  .installation {
+    width: 100%;
+  }
 }
 
 .feature-desc h4 {
   padding-left: 40px;
+}
+
+.installation {
+  width: 80%;
 }
 
 .footer {
